--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,58 @@
 /extlibs/poppler/share
 /extlibs/poppler/bin
 /extlibs/poppler/build
+/extlibs/*.log
+/extlibs/freetype/share
+/extlibs/freetype/bin
+/extlibs/freetype/build
+/extlibs/freetype/include
+/extlibs/freetype/lib
+/extlibs/libjpeg/share
+/extlibs/libjpeg/bin
+/extlibs/libjpeg/build
+/extlibs/libjpeg/include
+/extlibs/libjpeg/lib
+/extlibs/libpng/share
+/extlibs/libpng/bin
+/extlibs/libpng/build
+/extlibs/libpng/include
+/extlibs/libpng/lib
+/extlibs/libtiff/share
+/extlibs/libtiff/bin
+/extlibs/libtiff/build
+/extlibs/libtiff/include
+/extlibs/libtiff/lib
+/extlibs/pkg_config/share
+/extlibs/pkg_config/bin
+/extlibs/pkg_config/manifest
+/extlibs/zlib/lib
+/extlibs/zlib/bin
+/extlibs/zlib/build
+/extlibs/zlib/include
+/output/*.pdf
+/output/*.dll
+/frominternet/citeproc-0.7.1
+/libwidgets/images/Thumbs.db
+/output/*.cfm
+/output/.0022522
+/output/PRESTO2011.0022522
+/output/*.exe
+*.pdf
+qtplugins
+/output/pdfs
+*.dll
+/output/config/completers
+/output/literatur.xld
+/output/litsoz3.ini
+/output/test.db
+/output/test.lst
+/output/test.xld
+/output/test1.db
+/output/test1.xld
+/output/test2.xld
+/output/testcoins.xld
+/output/testdata/test.bib
+/test_poppler/README.txt
+/test_poppler/pdfviewer.pro
+*.user
+/test_poppler/ui_window.h
