--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,23 @@ Makefile
 *.xld
 *.3-pre1
 /lib/*.uS7484
+/frominternet/poppler_QT5_demo/poppler_Qt5_demo.config
+/frominternet/poppler_QT5_demo/poppler_Qt5_demo.creator
+/frominternet/poppler_QT5_demo/poppler_Qt5_demo.creator.user
+/frominternet/poppler_QT5_demo/poppler_Qt5_demo.files
+/frominternet/poppler_QT5_demo/poppler_Qt5_demo.includes
+/frominternet/poppler_QT5_demo/poppler_QT5_demo/poppler_QT5_demo.pro
+/frominternet/poppler_QT5_demo/*.user
+/frominternet/poppler_QT5_demo/debug/moc_abstractinfodock.cpp
+/frominternet/poppler_QT5_demo/debug/moc_embeddedfiles.cpp
+/frominternet/poppler_QT5_demo/debug/moc_fonts.cpp
+/frominternet/poppler_QT5_demo/debug/moc_info.cpp
+/frominternet/poppler_QT5_demo/debug/moc_metadata.cpp
+/frominternet/poppler_QT5_demo/debug/moc_navigationtoolbar.cpp
+/frominternet/poppler_QT5_demo/debug/moc_optcontent.cpp
+/frominternet/poppler_QT5_demo/debug/moc_pageview.cpp
+/frominternet/poppler_QT5_demo/debug/moc_permissions.cpp
+/frominternet/poppler_QT5_demo/debug/moc_thumbnails.cpp
+/frominternet/poppler_QT5_demo/debug/moc_toc.cpp
+/frominternet/poppler_QT5_demo/debug/moc_viewer.cpp
+/frominternet/poppler_QT5_demo/debug/poppler_QT5_demo.exe
