--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ Makefile
 /frominternet/poppler_QT5_demo/debug/moc_toc.cpp
 /frominternet/poppler_QT5_demo/debug/moc_viewer.cpp
 /frominternet/poppler_QT5_demo/debug/poppler_QT5_demo.exe
+Thumbs.db
